--- a/res/layout/dynamic_info_fragment_layout.xml
+++ b/res/layout/dynamic_info_fragment_layout.xml
@@ -36,23 +36,22 @@
     </RelativeLayout>
     -->
 
-
-    <!--
-         <com.dhn.marrysocial.view.RefreshListView
+    <com.dhn.marrysocial.view.RefreshListView
         android:id="@+id/dynamic_info_listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:listSelector="#00000000" >
     </com.dhn.marrysocial.view.RefreshListView>
-    -->
 
-    <ListView
+    <!--
+         <ListView
         android:id="@+id/dynamic_info_listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:listSelector="#00000000" >
 
     </ListView>
+    -->
 
     <TextView
         android:id="@+id/dynamic_info_list_empty"
@@ -80,8 +79,8 @@
         android:layout_width="match_parent"
         android:layout_height="95px"
         android:layout_alignParentBottom="true"
-        android:visibility="gone"
-        android:background="@drawable/base_action_bar_bg" >
+        android:background="@drawable/base_action_bar_bg"
+        android:visibility="gone" >
 
         <ImageView
             android:id="@+id/dynamic_info_reply_send"
@@ -101,10 +100,10 @@
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@id/dynamic_info_reply_send"
             android:background="@drawable/gray_bkg_selector"
-            android:paddingLeft="16dp"
-            android:paddingTop="2dp"
+            android:hint="让世界聆听你的心跳..."
             android:paddingBottom="2dp"
-            android:hint="让世界聆听你的心跳..." />
+            android:paddingLeft="16dp"
+            android:paddingTop="2dp" />
     </RelativeLayout>
 
 </RelativeLayout>
