--- a/res/layout/chat_msg_layout.xml
+++ b/res/layout/chat_msg_layout.xml
@@ -56,6 +56,8 @@
         android:id="@+id/chat_msg_foot"
         android:layout_width="match_parent"
         android:layout_height="95px"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_alignParentBottom="true"
         android:background="@drawable/base_action_bar_bg" >
 
