--- a/res/layout/contacts_info_layout.xml
+++ b/res/layout/contacts_info_layout.xml
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:padding="4dp"
-                android:text="焦立东"
+                android:text="楠楠"
                 android:textSize="18dp" />
 
             <TextView
@@ -80,9 +80,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:alpha="0.6"
-                android:padding="4dp"
-                android:text="来自 楠楠 等3人的通信录"
+                android:paddingBottom="8dp"
+                android:paddingTop="4dp"
+                android:text="来自 楠楠 等3位好友的通信录"
                 android:textSize="14dp" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:alpha="0.5"
+                android:background="@color/darkgray" >
+            </ImageView>
         </LinearLayout>
 
         <LinearLayout
@@ -93,78 +101,93 @@
             android:orientation="horizontal" >
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal" >
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="6dp" >
 
                 <TextView
                     android:id="@+id/contacts_info_gender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:padding="4dp"
-                    android:text="焦立东"
-                    android:textSize="18dp" />
+                    android:text="性别"
+                    android:textSize="16dp"
+                    android:alpha="0.6" />
 
                 <ImageView
                     android:id="@+id/contacts_info_gender_pic"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_centerVertical="true"
-                    android:paddingLeft="12dp"
-                    android:paddingRight="2dp"
-                    android:src="@drawable/ic_return_button" />
+                    android:paddingLeft="8dp"
+                    android:src="@drawable/ic_male_selected" />
             </LinearLayout>
 
+            <ImageView
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:alpha="0.5"
+                android:background="@color/darkgray" >
+            </ImageView>
+
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal" >
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="6dp" >
 
                 <TextView
                     android:id="@+id/contacts_info_astro"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:padding="4dp"
-                    android:text="焦立东"
-                    android:textSize="18dp" />
+                    android:text="星座"
+                    android:textSize="16dp"
+                    android:alpha="0.6" />
 
                 <ImageView
                     android:id="@+id/contacts_info_astro_pic"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_centerVertical="true"
-                    android:paddingLeft="12dp"
-                    android:paddingRight="2dp"
-                    android:src="@drawable/ic_return_button" />
+                    android:paddingLeft="8dp"
+                    android:src="@drawable/ic_aries_baiyang_green" />
             </LinearLayout>
 
+            <ImageView
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:alpha="0.5"
+                android:background="@color/darkgray" >
+            </ImageView>
+
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal" >
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="6dp" >
 
                 <TextView
                     android:id="@+id/contacts_info_hobby"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:padding="4dp"
-                    android:text="焦立东"
-                    android:textSize="18dp" />
+                    android:text="爱好"
+                    android:textSize="16dp"
+                    android:alpha="0.6" />
 
                 <ImageView
                     android:id="@+id/contacts_info_hobby_pic"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
-                    android:paddingLeft="12dp"
-                    android:paddingRight="2dp"
-                    android:src="@drawable/ic_return_button" />
+                    android:paddingLeft="8dp"
+                    android:src="@drawable/ic_female_selected" />
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
@@ -173,18 +196,30 @@
         android:id="@+id/contacts_info_foot_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/base_action_bar_bg" >
+        android:layout_marginBottom="-45dp"
+        android:layout_alignParentBottom="true" >
 
         <Button
             android:id="@+id/contacts_info_chat_btn"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:clickable="true"
-            android:padding="4dp"
-            android:text="发消息" />
+            android:paddingLeft="28dp"
+            android:paddingRight="28dp"
+            android:background="@drawable/contacts_info_btn_selector"
+            android:text="开始聊天"
+            android:textSize="16dp"
+            android:textColor="@color/gray" />
     </RelativeLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/contacts_info_head"
+        android:alpha="0.5"
+        android:background="@color/darkgray" >
+    </ImageView>
 
     <ListView
         android:id="@+id/contacts_info_listview"
