--- a/res/layout/chat_msg_item_to_right_layout.xml
+++ b/res/layout/chat_msg_item_to_right_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -28,22 +29,36 @@
         android:layout_marginRight="15dp"
         android:layout_marginTop="10dp" >
 
+        <com.dhn.marrysocial.roundedimageview.RoundedImageView
+            android:id="@+id/chat_msg_person_pic"
+            android:layout_width="102px"
+            android:layout_height="102px"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/head"
+            app:border_width="0dp"
+            app:corner_radius="50dp"
+            app:oval="false" />
+
         <TextView
             android:id="@+id/chat_msg_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="10dp"
+            android:layout_alignParentBottom="true"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="40dp"
+            android:layout_toLeftOf="@id/chat_msg_person_pic"
             android:background="@drawable/chat_to_bkg_selector"
             android:clickable="true"
             android:focusable="true"
             android:gravity="left|center"
             android:lineSpacingExtra="2dp"
             android:minHeight="50dp"
-            android:textColor="#ff000000"
+            android:textColor="#99000000"
             android:textSize="15sp" />
-
     </RelativeLayout>
 
 </LinearLayout>
