--- a/res/layout/chat_msg_item_from_left_layout.xml
+++ b/res/layout/chat_msg_item_from_left_layout.xml
@@ -46,10 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:paddingLeft="40dp"
-            android:paddingRight="20dp"
+            android:layout_marginLeft="-10dp"
             android:layout_toRightOf="@id/chat_msg_person_pic"
             android:background="@drawable/chat_from_bkg_selector"
             android:clickable="true"
