--- a/res/layout/contacts_info_layout.xml
+++ b/res/layout/contacts_info_layout.xml
@@ -74,6 +74,7 @@
             android:layout_centerInParent="true"
             android:background="@drawable/contacts_info_btn_selector"
             android:clickable="true"
+            android:padding="5dp"
             android:text="开始聊天"
             android:textColor="@color/gray"
             android:textSize="16dp" />
