--- a/res/layout/invite_friends_item_layout.xml
+++ b/res/layout/invite_friends_item_layout.xml
@@ -12,9 +12,10 @@
             android:id="@+id/invite_friend_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="20dp"
             android:layout_marginLeft="24dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="20dp"
             android:alpha="0.8"
             android:text="愚蠢的小萝卜"
             android:textSize="16dp" />
@@ -26,6 +27,7 @@
             android:layout_centerVertical="true"
             android:visibility="gone"
             android:layout_toRightOf="@id/invite_friend_name"
+            android:paddingLeft="4dp"
             android:alpha="0.8"
             android:text="已注册"
             android:textSize="10dp"
@@ -36,14 +38,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="5dp"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="20dp"
             android:layout_marginRight="24dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/contacts_info_btn_selector"
             android:clickable="true"
             android:padding="2dp"
             android:text="邀请"
-            android:textColor="@color/gray"
+            android:textColor="@color/white"
             android:textSize="16dp" />
     </RelativeLayout>
 
