--- a/res/layout/contacts_info_layout.xml
+++ b/res/layout/contacts_info_layout.xml
@@ -7,8 +7,8 @@
     <RelativeLayout
         android:id="@+id/contacts_info_head_bar"
         android:layout_width="match_parent"
-        android:layout_height="85px"
-        android:layout_alignParentTop="true" >
+        android:layout_height="95px"
+        android:background="#991abc9c" >
 
         <RelativeLayout
             android:id="@+id/contacts_info_return"
@@ -32,11 +32,11 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/contacts_info_arrow"
-                android:alpha="0.8"
-                android:paddingLeft="12dp"
+                android:gravity="center_vertical"
                 android:paddingRight="12dp"
                 android:text="楠楠"
-                android:textSize="16dp" />
+                android:textSize="16dp"
+                android:textColor="@color/white" />
         </RelativeLayout>
     </RelativeLayout>
 
