--- a/res/layout/invite_friends_layout.xml
+++ b/res/layout/invite_friends_layout.xml
@@ -4,34 +4,49 @@
     android:layout_height="match_parent" >
 
     <RelativeLayout
-        android:id="@+id/invite_friends_return"
+        android:id="@+id/invite_friends_toolbar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/default_bkg_selector"
-        android:clickable="true" >
+        android:layout_height="95px"
+        android:background="#991abc9c" >
 
-        <ImageView
-            android:id="@+id/invite_friends_arrow"
+        <RelativeLayout
+            android:id="@+id/invite_friends_return"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/default_bkg_selector"
+            android:clickable="true" >
+
+            <ImageView
+                android:id="@+id/invite_friends_arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:src="@drawable/ic_return_button" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/invite_friends_arrow"
+                android:gravity="center_vertical"
+                android:paddingRight="12dp"
+                android:text="邀请好友"
+                android:textColor="@color/white"
+                android:textSize="16dp" />
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/invite_friends_finish"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:paddingBottom="10dp"
+            android:background="@drawable/default_bkg_selector"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:paddingTop="10dp"
-            android:src="@drawable/ic_return_button" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/invite_friends_arrow"
-            android:alpha="0.8"
-            android:paddingBottom="10dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="12dp"
-            android:paddingTop="10dp"
-            android:text="邀请好友"
+            android:text="完成"
             android:textColor="@color/white"
             android:textSize="16dp" />
     </RelativeLayout>
@@ -39,7 +54,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_below="@id/invite_friends_return"
+        android:layout_below="@id/invite_friends_toolbar"
         android:alpha="0.6"
         android:background="@color/darkgray" />
 
@@ -47,7 +62,7 @@
         android:id="@+id/invite_friends_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/invite_friends_return"
+        android:layout_below="@id/invite_friends_toolbar"
         android:alpha="0.8"
         android:paddingBottom="15dp"
         android:paddingLeft="24dp"
