--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -43,6 +43,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
+        android:inputType="textPassword"
         android:hint="输入密码"
         android:minWidth="200dp"
         android:textSize="14dp" />
