--- a/res/layout/marrysocial_main.xml
+++ b/res/layout/marrysocial_main.xml
@@ -24,9 +24,9 @@
             android:layout_toRightOf="@id/actionbar_logo"
             android:paddingLeft="8dp"
             android:text="来钱"
-            android:visibility="gone"
             android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:visibility="gone" />
 
         <ImageButton
             android:id="@+id/actionbar_setting"
@@ -34,9 +34,9 @@
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:background="@drawable/default_bkg_selector"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:background="@drawable/default_bkg_selector"
             android:src="@drawable/ic_settings" />
 
         <ImageButton
@@ -45,9 +45,9 @@
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@id/actionbar_setting"
+            android:background="@drawable/default_bkg_selector"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:background="@drawable/default_bkg_selector"
             android:src="@drawable/ic_user_center" />
 
         <ImageButton
@@ -56,11 +56,10 @@
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@id/actionbar_user_center"
+            android:background="@drawable/default_bkg_selector"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:background="@drawable/default_bkg_selector"
             android:src="@drawable/ic_invite" />
-
     </RelativeLayout>
 
     <RelativeLayout
@@ -73,6 +72,77 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/base_action_bar_bg" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <ImageView
+                        android:id="@+id/community_headbar_comments_new_tips"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:paddingRight="18dp"
+                        android:paddingTop="4dp"
+                        android:src="@drawable/icon_new" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <ImageView
+                        android:id="@+id/community_headbar_chatmsg_new_tips"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="invisible"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:paddingRight="18dp"
+                        android:paddingTop="4dp"
+                        android:src="@drawable/icon_new" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" >
+
+                    <ImageView
+                        android:id="@+id/community_headbar_contacts_new_tips"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="invisible"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:paddingRight="18dp"
+                        android:paddingTop="4dp"
+                        android:src="@drawable/icon_new" />
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
     </RelativeLayout>
 
     <android.support.v4.view.ViewPager
