--- a/res/layout/dynamic_info_item_layout.xml
+++ b/res/layout/dynamic_info_item_layout.xml
@@ -31,6 +31,7 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="8dp"
             android:layout_toRightOf="@id/dynamic_info_person_pic"
+            android:background="@drawable/gray_bkg_selector"
             android:alpha="0.8"
             android:text="SWINTER"
             android:textColor="@color/main_color"
