--- a/res/layout/photo_view_layout.xml
+++ b/res/layout/photo_view_layout.xml
@@ -9,6 +9,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:flipInterval="30"
+        android:background="@color/black"
         android:persistentDrawingCache="animation" />
 
     <com.dhn.marrysocial.viewpagerindicator.LinePageIndicator
